k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: ecommerce
    environment: dev
